# verge

./: .gitignore  BUILD-NOTES.md  README.md  VERGE-Opus-Build-Prompt.md  pyproject.toml
Spec & Details/: BSD-Experiment-Protocol.md  Proxy-Dilemma-Note.md  VERGE-Build-Map.md  VERGE-Pressure-Test.md  VERGE-Rev9-Layered-AGI.md  verge-engineering.md  verge-spec.md
Spec & Details/m1-verified-reasoner/: README.md  RESULTS.md  config.py  data.py  expert_iteration.py  metrics.py  mock_model.py  model.py  requirements.txt  run.py  verifiers.py
configs/: accelerate_zero2.yaml
scripts/: pod_setup.sh  pod_setup_budget.sh  run_report.sh
tests/: test_eval_harness.py  test_l1_perception.py  test_l2_world_model.py  test_l3_grpo.py  test_l3_mock.py  test_l4_plasticity.py  test_l5_social.py  test_l6_motivation.py  test_l7_router.py  test_latent_contract.py  test_memory.py  test_orchestrator.py  test_ring_enforcement.py  test_stub_layers.py  test_workspace.py
verge/: __init__.py  _m1bridge.py  _numpy_nn.py  latent.py  orchestrator.py  ring_check.py  workspace.py
verge/configs/: __init__.py
verge/eval/: __init__.py  harness.py  metrics.py  mock.py
verge/l1_perception/: __init__.py  service.py
verge/l2_world_model/: __init__.py  ncm.py  service.py
verge/l3_reasoner/: __init__.py  _dist.py  data.py  distill.py  grpo.py  reward.py  run.py  search.py  service.py  skeleton.py
verge/l4_plasticity/: __init__.py  service.py  upgd.py
verge/l5_social/: __init__.py  inverse_planning.py  service.py
verge/l6_motivation/: __init__.py  magellan.py  service.py
(+10 files in other folders)
